# commitstat

./: .goreleaser.yml  README.md  go.mod  install.sh  mypy_example.txt  pyproject.toml
.github/workflows/: nextrelease.yml
cmd/commitstat/: main.go
commitstat/: cli.py  config.py  core.py  stats.py
internal/github/: events.go  main.go
internal/parse/: main.go  main_test.go
internal/status/: main.go  main_test.go
scripts/: format  install  pre-commit  run
