[tool.poetry]
name = "commitstat"
version = "0.1.0"
description = "Store commit stats as git notes."
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
git-stats = "commitstat:cli.cli"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.0"
requests = "*"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.202"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
